--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "vue-router": "^3.0.1",
     "vuetify": "^2.0.4",
     "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex-persistedstate": "^2.5.4",
+    "webpack-cli": "^3.3.9"
   },
   "devDependencies": {
     "@mdi/font": "^4.2.95",
